[gd_scene load_steps=8 format=2]

[ext_resource path="res://fonts/SB aggro L.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://fonts/SB aggro B.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Menu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 40
font_data = ExtResource( 2 )

[node name="Menu" type="Control"]
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
modulate = Color( 0, 0.843137, 1, 0.392157 )
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="TitleLabel" type="Label" parent="."]
margin_top = 20.0
margin_right = 1024.0
margin_bottom = 120.0
custom_fonts/font = SubResource( 1 )
text = "SAT Alarm Scheduler"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditLabel" type="Label" parent="."]
margin_left = 12.0
margin_top = 520.0
margin_right = 1012.0
margin_bottom = 590.0
custom_fonts/font = SubResource( 2 )
text = "Copyleft Created by TUBIKY"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddButton" type="Button" parent="."]
margin_left = 392.0
margin_top = 214.0
margin_right = 632.0
margin_bottom = 274.0
custom_fonts/font = SubResource( 4 )
text = "Add Files"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="."]
margin_left = 392.0
margin_top = 296.0
margin_right = 632.0
margin_bottom = 356.0
custom_fonts/font = SubResource( 4 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HelpButton" type="Button" parent="."]
margin_left = 392.0
margin_top = 377.0
margin_right = 632.0
margin_bottom = 437.0
custom_fonts/font = SubResource( 5 )
text = "Help"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileDialog" type="FileDialog" parent="."]
margin_right = 315.0
margin_bottom = 130.0
access = 2
current_dir = "/Users/user/Documents/godot/2022SAT"
current_path = "/Users/user/Documents/godot/2022SAT/"

[connection signal="pressed" from="AddButton" to="." method="_on_AddButton_pressed"]
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="dir_selected" from="FileDialog" to="." method="_on_FileDialog_dir_selected"]
